--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
                     <div class="text">School Deets</div>
                     <div class="p">
                     <p>Podar International School, Wagholi (2011-2019)</p><br>
-                    <p><span style="color:crimson">12th Subjects -</span> Physics + Chemistry + Mathematics + Computer Science + English</p>
-                    <p><span style="color:crimson">12th Percentage -</span> 92%</p>
-                    <p><span style="color:crimson">10th Subjects -</span> Physics + Chemistry + Biology + Mathematics + Computer Application + English + Hindi + Geography + History & Civics</p>
-                    <p><span style="color:crimson">10th Percentage -</span> 98%</p>
-                    <p><span style="color:crimson">Awards - </span> 
+                    <p><span style="color:#2541B2">12th Subjects -</span> Physics + Chemistry + Mathematics + Computer Science + English</p>
+                    <p><span style="color:#2541B2">12th Percentage -</span> 92%</p>
+                    <p><span style="color:#2541B2">10th Subjects -</span> Physics + Chemistry + Biology + Mathematics + Computer Application + English + Hindi + Geography + History & Civics</p>
+                    <p><span style="color:#2541B2">10th Percentage -</span> 98%</p>
+                    <p><span style="color:#2541B2">Awards - </span> 
                         <ul class="list">
                             <li>Head Boy of the School</li>
                             <li>IEO and NSO scorer</li>
@@ -202,9 +202,9 @@
                     <div class="p">
             </div>
                     <p>SRM Institute of Science and Technology,kattankalanthur(2021-2025)</p><br>
-                    <p><span style="color:crimson">Course -</span> B.Tech in Computer Science with specialization In Ai and ML</p>
-                    <p><span style="color:crimson">CGPA -</span> 9.4</p>
-                    <p><span style="color:crimson">Awards - </span>
+                    <p><span style="color:#2541B2">Course -</span> B.Tech in Computer Science with specialization In Ai and ML</p>
+                    <p><span style="color:#2541B2">CGPA -</span> 9.4</p>
+                    <p><span style="color:#2541B2">Awards - </span>
                         <ul class="list">
                             <li>Ranked 1st at Iosd Winterlympics organised by DTU,Delhi(2021)</li>
                             <li>innovative Researcher at Next Tech Labs</li>
