--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <span>React</span>
                             <span>70%</span>
                         </div>
-                        <div class="line py"></div>
+                        <div class="line tf"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
@@ -165,7 +165,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>70%</span>
+                            <span>60%</span>
                         </div>
                         <div class="line css"></div>
                     </div>
@@ -181,7 +181,7 @@
             <h2 class="title">My Education</h2>
             <div class="education-content">
                 <div class="column left">
-                    <div class="text">School Deets</div>
+                    <div class="text">School Details</div>
                     <div class="p">
                     <p>Podar International School, Wagholi (2011-2019)</p><br>
                     <p><span style="color:#2541B2">12th Subjects -</span> Physics + Chemistry + Mathematics + Computer Science + English</p>
@@ -279,13 +279,13 @@
                             <div class="sub-title">Omprasad Sadavarte</div>
                         </div>
                     </div>
-                    <!-- <div class="row">
+                    <div class="row">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="info">
                             <div class="head">Address</div>
-                            <div class="sub-title">Ghaziabad, Uttar Pradesh, India</div>
+                            <div class="sub-title">Magarpatta, Pune, India</div>
                         </div>
-                    </div> -->
+                    </div>
                     <div class="row">
                         <i class="fas fa-envelope"></i>
                         <div class="info">
